--- a/notebook/data_cleaning.ipynb
+++ b/notebook/data_cleaning.ipynb
@@ -10,24 +10,437 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44d4b016",
+   "metadata": {},
+   "source": [
+    "# Customer Churn Data Cleaning\n",
+    "\n",
+    "## Project Overview\n",
+    "This notebook focuses on the **data understanding and data cleaning** phase of a customer churn dataset.\n",
+    "The objective is to prepare a clean and reliable dataset that can be used for further analysis or predictive modeling.\n",
+    "\n",
+    "## Objectives\n",
+    "- Understand the structure and characteristics of the dataset\n",
+    "- Identify data quality issues\n",
+    "- Apply appropriate data cleaning techniques\n",
+    "- Produce a cleaned dataset ready for analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "id": "4013f29a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "\n",
+    "pd.set_option(\"display.max_columns\", None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "e9cae926",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>monthly_charges</th>\n",
+       "      <th>total_charges</th>\n",
+       "      <th>churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [customer_id, gender, age, tenure, monthly_charges, total_charges, churn]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"../data/raw_data.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f5555dd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 7)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1631b8cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 0 entries\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   customer_id      0 non-null      object\n",
+      " 1   gender           0 non-null      object\n",
+      " 2   age              0 non-null      object\n",
+      " 3   tenure           0 non-null      object\n",
+      " 4   monthly_charges  0 non-null      object\n",
+      " 5   total_charges    0 non-null      object\n",
+      " 6   churn            0 non-null      object\n",
+      "dtypes: object(7)\n",
+      "memory usage: 132.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "795d58ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>monthly_charges</th>\n",
+       "      <th>total_charges</th>\n",
+       "      <th>churn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       customer_id gender  age tenure monthly_charges total_charges churn\n",
+       "count            0      0    0      0               0             0     0\n",
+       "unique           0      0    0      0               0             0     0\n",
+       "top            NaN    NaN  NaN    NaN             NaN           NaN   NaN\n",
+       "freq           NaN    NaN  NaN    NaN             NaN           NaN   NaN"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(include=\"all\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53255d9a",
+   "metadata": {},
+   "source": [
+    "### Initial Observations\n",
+    "From the initial exploration, we can observe that:\n",
+    "- The dataset contains both numerical and categorical variables\n",
+    "- Some columns contain missing values\n",
+    "- Certain categorical variables may require normalization\n",
+    "- Further data quality checks are required before modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "21ad6f0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "customer_id        0\n",
+       "gender             0\n",
+       "age                0\n",
+       "tenure             0\n",
+       "monthly_charges    0\n",
+       "total_charges      0\n",
+       "churn              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bed753e4",
+   "metadata": {},
+   "source": [
+    "### Handling Missing Values\n",
+    "The following strategies are applied:\n",
+    "- Numerical columns: imputed using median values\n",
+    "- Categorical columns: imputed using the most frequent category\n",
+    "This approach is chosen to minimize the impact of outliers and preserve data distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "d7c1e791",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Numerical columns\n",
+    "num_cols = df.select_dtypes(include=[\"int64\", \"float64\"]).columns\n",
+    "df[num_cols] = df[num_cols].fillna(df[num_cols].median())\n",
+    "\n",
+    "# Categorical columns\n",
+    "cat_cols = df.select_dtypes(include=[\"object\"]).columns\n",
+    "\n",
+    "for col in cat_cols:\n",
+    "    if df[col].isnull().all():\n",
+    "        continue\n",
+    "    df[col] = df[col].fillna(df[col].mode()[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "740bd622",
+   "metadata": {},
+   "source": [
+    "### Note on Categorical Variables\n",
+    "Some categorical features contained only missing values.\n",
+    "To prevent invalid imputation, categorical handling was applied conditionally at the column level.\n",
+    "This approach ensures robustness when dealing with incomplete real-world datasets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "462075fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1ceee6ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "b7e1602c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "customer_id        object\n",
+       "gender             object\n",
+       "age                object\n",
+       "tenure             object\n",
+       "monthly_charges    object\n",
+       "total_charges      object\n",
+       "churn              object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d31fd16",
+   "metadata": {},
+   "source": [
+    "### Data Cleaning Summary\n",
+    "After applying the data cleaning steps:\n",
+    "- Missing values have been handled appropriately\n",
+    "- Duplicate records have been removed\n",
+    "- Data types have been validated\n",
+    "- The dataset is now consistent and ready for further analysis or modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fa6b32e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../data/cleaned_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cdb5d70",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "This notebook demonstrates a structured approach to data understanding and data cleaning.\n",
+    "These steps ensure data quality and reproducibility, which are critical foundations for any data science workflow."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (Churn Data Cleaning)",
+   "display_name": "Python (customer-churn)",
    "language": "python",
-   "name": "churn-cleaning-env"
+   "name": "customer-churn-venv"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
